build-logs-failed/build-focuslist-0.1.1.0.log
Build profile: -w ghc-9.6.6 -O1
In order, the following will be built (use -v for more details):
 - focuslist-0.1.1.0 (lib:focuslist, test:focuslist-doctests, test:focuslist-test) (first run)
[1 of 2] Compiling Main             ( /tmp/workdir-focuslist/focuslist-0.1.1.0/dist-newstyle/build/x86_64-linux/ghc-9.6.6/focuslist-0.1.1.0/setup/setup.hs, /tmp/workdir-focuslist/focuslist-0.1.1.0/dist-newstyle/build/x86_64-linux/ghc-9.6.6/focuslist-0.1.1.0/setup/Main.o )
[2 of 2] Linking /tmp/workdir-focuslist/focuslist-0.1.1.0/dist-newstyle/build/x86_64-linux/ghc-9.6.6/focuslist-0.1.1.0/setup/setup
Configuring focuslist-0.1.1.0...
Preprocessing test suite 'focuslist-doctests' for focuslist-0.1.1.0..
Building test suite 'focuslist-doctests' for focuslist-0.1.1.0..
[1 of 2] Compiling Build_doctests
[2 of 2] Compiling Main
[3 of 3] Linking /tmp/workdir-focuslist/focuslist-0.1.1.0/dist-newstyle/build/x86_64-linux/ghc-9.6.6/focuslist-0.1.1.0/build/focuslist-doctests/focuslist-doctests
Preprocessing library for focuslist-0.1.1.0..
Building library for focuslist-0.1.1.0..
[1 of 1] Compiling Data.FocusList
Preprocessing test suite 'focuslist-test' for focuslist-0.1.1.0..
Building test suite 'focuslist-test' for focuslist-0.1.1.0..
[1 of 3] Compiling Test.FocusList.Invariants
[2 of 3] Compiling Test.FocusList

test/Test/FocusList.hs:13:23: error:
    Module ‘Test.Validity’ does not export ‘GenInvalid’
   |
13 | import Test.Validity (GenInvalid, GenUnchecked, GenValid(genValid), Validity(validate), check, eqSpec, genValidSpec)
   |                       ^^^^^^^^^^

test/Test/FocusList.hs:13:35: error:
    Module ‘Test.Validity’ does not export ‘GenUnchecked’
   |
13 | import Test.Validity (GenInvalid, GenUnchecked, GenValid(genValid), Validity(validate), check, eqSpec, genValidSpec)
   |                                   ^^^^^^^^^^^^
Error: [Cabal-7125]
Failed to build focuslist-0.1.1.0.

